# expression-approximator

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: CMakeLists.txt  expr.cpp  expr.h  ga.cpp  ga.h
